--- a/CPP_Module00/ex00/Makefile
+++ b/CPP_Module00/ex00/Makefile
@@ -5,31 +5,32 @@
 #                                                     +:+ +:+         +:+      #
 #    By: charleshajjar <charleshajjar@student.42    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2022/12/19 18:06:10 by charleshajj       #+#    #+#              #
-#    Updated: 2022/12/19 18:37:20 by charleshajj      ###   ########.fr        #
+#    Created: 2022/12/19 18:45:10 by charleshajj       #+#    #+#              #
+#    Updated: 2022/12/19 18:45:18 by charleshajj      ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME: megaphone
+NAME = megaphone
 
-SRC: megaphone.cpp
-OBJ: ${SRC:.cpp=.o}
+SRCS = megaphone.cpp
+OBJS = ${SRCS:.cpp=.o}
 
-CC: c++
+CC = c++
+CFLAGS = -Wall -Wextra -Werror -std=c++98
 
-FLAGS: -Wall -Wextra -Werror -std = c++98
 all: $(NAME)
 
 .cpp.o:
-		$(CC) $(FLAGS) -c $< -o $(<:.cpp=.o)
-$(NAME): $(OBJ)
-	$(CC) $(OBJ) *(FLAGS) -o $(NAME)
+	$(CC) $(CFLAGS) -c $< -o $(<:.cpp=.o)
 
-clean: 
-	@$(RM) $(OBJ)
+$(NAME): $(OBJS)
+	$(CC) $(OBJS) $(CFLAGS) -o $(NAME)
+
+clean:
+	@$(RM)  $(OBJS)
 
 fclean: clean
-		@$(RM) $(NAME)
+	@$(RM) $(NAME)
 
 re: fclean all
 
