--- a/CPP_Module01/ex03/Makefile
+++ b/CPP_Module01/ex03/Makefile
@@ -6,7 +6,28 @@
 #    By: chajjar <chajjar@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/09 19:01:22 by chajjar           #+#    #+#              #
-#    Updated: 2023/01/09 19:01:24 by chajjar          ###   ########.fr        #
+#    Updated: 2023/01/10 15:42:40 by chajjar          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
+NAME = Violence
+
+SRCS = Weapon.cpp main.cpp HumanB.cpp HumanA.cpp
+OBJS = $(SRCS:.cpp=.o)
+
+CC = c++
+FLAGS = -Wall -Wextra -Werror -std=c++98
+
+all: $(NAME)
+
+$(NAME): $(OBJS)
+		$(CC) $(FLAGS) -o $(NAME) $(OBJS)
+
+clean:
+		rm -f $(OBJS)
+
+fclean: clean
+		rm -f $(NAME)
+re: fclean all 
+
+.PHONY: all clean fclean re
