--- a/CPP_Module01/ex05/Makefile
+++ b/CPP_Module01/ex05/Makefile
@@ -6,7 +6,29 @@
 #    By: chajjar <chajjar@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/10 21:54:13 by chajjar           #+#    #+#              #
-#    Updated: 2023/01/10 21:54:13 by chajjar          ###   ########.fr        #
+#    Updated: 2023/01/11 09:35:45 by chajjar          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
+NAME = HARL
+
+SRCS = main.cpp Harl.cpp
+OBJ = $(SRCS:.cpp=.o)
+
+CC = c++
+FLAGS = -Wall -Werror -Wextra -std=c++98
+
+all : $(NAME)
+
+$(NAME): $(OBJ)
+		$(CC) $(FLAGS) -o $(NAME) $(OBJ)
+
+clean: 
+		rm -f $(OBJ)
+
+fclean: clean
+		rm -f $(NAME)
+
+re: fclean all
+
+.PHONY: all clean fclean re
