--- a/CPP_Module03/ex00/Makefile
+++ b/CPP_Module03/ex00/Makefile
@@ -6,7 +6,26 @@
 #    By: chajjar <chajjar@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/12 23:19:28 by chajjar           #+#    #+#              #
-#    Updated: 2023/01/12 23:19:29 by chajjar          ###   ########.fr        #
+#    Updated: 2023/01/13 12:24:18 by chajjar          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
+NAME = ClapTrap
+
+SRCS = main.cpp ClapTrap.cpp
+OBJS = $(SRCS:.cpp=.o)
+CC = c++
+FLAGS = -Wall -Wextra -Werror -std=c++98
+
+all : $(NAME)
+
+$(NAME) : $(OBJS)
+		$(CC) $(FLAGS) -o $(NAME) $(OBJS)
+clean:
+		rm -f $(OBJS)
+
+fclean : clean
+		rm -f $(NAME)
+re : fclean all
+
+.PHONY : all clean  fclean re 
