--- a/CPP_Module03/ex02/Makefile
+++ b/CPP_Module03/ex02/Makefile
@@ -5,8 +5,27 @@
 #                                                     +:+ +:+         +:+      #
 #    By: chajjar <chajjar@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/01/13 19:15:43 by chajjar           #+#    #+#              #
-#    Updated: 2023/01/13 19:15:44 by chajjar          ###   ########.fr        #
+#    Created: 2023/01/12 23:19:28 by chajjar           #+#    #+#              #
+#    Updated: 2023/01/13 19:20:06 by chajjar          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
+NAME = Serena
+
+SRCS = main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp
+OBJS = $(SRCS:.cpp=.o)
+CC = c++
+FLAGS = -Wall -Wextra -Werror -std=c++98
+
+all : $(NAME)
+
+$(NAME) : $(OBJS)
+		$(CC) $(FLAGS) -o $(NAME) $(OBJS)
+clean:
+		rm -f $(OBJS)
+
+fclean : clean
+		rm -f $(NAME)
+re : fclean all
+
+.PHONY : all clean  fclean re 
