--- a/CPP_Module04/ex01/Makefile
+++ b/CPP_Module04/ex01/Makefile
@@ -6,13 +6,13 @@
 #    By: chajjar <chajjar@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/14 10:40:49 by chajjar           #+#    #+#              #
-#    Updated: 2023/01/14 17:17:13 by chajjar          ###   ########.fr        #
+#    Updated: 2023/01/14 17:23:08 by chajjar          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = Polymorphisme
 
-SRCS = main.cpp Cat.cpp Dog.cpp Animal.cpp WrongAnimal.cpp WrongCat.cpp
+SRCS = main.cpp Cat.cpp Dog.cpp Animal.cpp WrongAnimal.cpp WrongCat.cpp Brain.cpp
 OBJS = $(SRCS:.cpp=.o)
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
