--- a/CPP_Module05/ex02/Makefile
+++ b/CPP_Module05/ex02/Makefile
@@ -6,13 +6,13 @@
 #    By: chajjar <chajjar@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/14 20:04:55 by chajjar           #+#    #+#              #
-#    Updated: 2023/01/15 19:47:21 by chajjar          ###   ########.fr        #
+#    Updated: 2023/01/15 20:17:11 by chajjar          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = ENRANG
 
-SRCS = main.cpp Bureaucrat.cpp Form.cpp
+SRCS = main.cpp Bureaucrat.cpp Form.cpp ShrubberyCreationForm.cpp RobotomyRequestForm.cpp PresidentialPardonForm.cpp
 OBJS = $(SRCS:.cpp=.o)
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
