--- a/CPP_Module06/ex02/Makefile
+++ b/CPP_Module06/ex02/Makefile
@@ -6,11 +6,11 @@
 #    By: chajjar <chajjar@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/17 16:23:04 by chajjar           #+#    #+#              #
-#    Updated: 2023/01/17 16:44:15 by chajjar          ###   ########.fr        #
+#    Updated: 2023/01/17 16:41:52 by chajjar          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = Serialisation
+NAME = Identification
 
 SRCS = main.cpp
 
